# Ice_FEM_2025a

./: .gitignore  CMakeLists.txt  ClearResults.sh  Install_ICEFEM.sh  README.md  main.cpp
Documentation/: Doc.tex  references.bib
Documentation/%OUTDIR%/: Doc.aux  Doc.fdb_latexmk  Doc.out  Doc.toc
ExternalPackages/: HPC_HighFive.pc  HPC_RapidJSON.pc  HPC_eigen3.pc  HPC_hdf5.pc  HighFive.pc  RapidJSON.pc  eigen3.pc  hdf5.pc  petsc_install.txt
Initializations/: Initializations.h  Initialize.cpp
InputsOutputs/: OutputSaver.cpp  OutputSaver.h  Restarter.cpp  Restarter.h  SaveData.cpp  SaveData.h  inputData.cpp  inputData.h
Models/: ModelRegister.cpp  ModelRegister.h
Models/BaseModel/: BaseModel.cpp  BaseModel.h
Models/Constraints/: AreaConstraint.cpp  AreaConstraint.h  ConstraintsModel.cpp  ConstraintsModel.h  TimeDepConstraintsModel.cpp  TimeDepConstraintsModel.h
Models/ExternalForce/: BasalFriction.cpp  BasalFriction.h  ExternalForce.cpp  ExternalForce.h  FloatingBC.cpp  FloatingBC.h  OceanBC.cpp  OceanBC.h  TriAxial.cpp  TriAxial.h  WeakArea.cpp  WeakArea.h  WeakExternal.cpp  WeakExternal.h
Models/Fracture/InterfaceElements/: SymFluidInterface.cpp  SymFluidInterface.h
Models/Fracture/PhaseField/: CossPhaseField.cpp  CossPhaseField.h  PhaseField.cpp  PhaseField.h  PhaseFieldUtil.cpp  PhaseFieldUtil.h
Models/LinearElastic/: GeneralSolidModel.cpp  GeneralSolidModel.h  LargeDefModel.cpp  LargeDefModel.h  LinearElasticModel.cpp  LinearElasticModel.h
Models/Materials/: BaseMaterial.cpp  BaseMaterial.h  CosseratMaterial.cpp  CosseratMaterial.h  FluidMaterial.cpp  FluidMaterial.h  IceMaterial.cpp  IceMaterial.h  PhaseFieldMaterial.cpp  PhaseFieldMaterial.h  SolidMaterial.cpp  SolidMaterial.h  ThermalMaterial.cpp  ThermalMaterial.h
Models/PoroElasticity/: VariablePorosity.cpp  VariablePorosity.h
Models/Thermal/: ThermalModel.cpp  ThermalModel.h
Physics/: Constrainer.cpp  Constrainer.h  DofSpace.cpp  DofSpace.h  TimeSchemes.cpp  TimeSchemes.h  physics.cpp  physics.h
Physics/Stabilisation/: SUPG.cpp  SUPG.h  isotropicDiff.cpp  isotropicDiff.h
Physics/Visualisation/: Icon.h  PlotData_XY.cpp  PlotData_XY.h  Plot_BoundaryFill.cpp  Plot_BoundaryFill.h  Plot_Contour3D.cpp  Plot_Contour3D.h  Plot_IPSurf_3D.cpp  Plot_IPSurf_3D.h  Plot_Surf2D.cpp  Plot_Surf2D.h  Plot_Surf3D.cpp  Plot_Surf3D.h  Visualisation.cpp  Visualisation.h
Solvers/: NonLinSolver.cpp  NonLinSolver.h  TimeSolver.cpp  TimeSolver.h
Solvers/LinSolvers/: BaseLinSolver.cpp  BaseLinSolver.h  GMRESLinSolver.cpp  GMRESLinSolver.h  LinSolveRegister.cpp  LinSolveRegister.h  MUMPSLinSolver.cpp  MUMPSLinSolver.h  PARDISOLinSolver.cpp  PARDISOLinSolver.h
TestCases/DamageChallenge/: AnimateData.m  DamageChallenge.json  RunSweep.py  test_PhasefieldFunctions.m
TestCases/DamageChallenge/MeshGeneration/: TriangleMesh.m  generate_tmesh.m  partition.m  process_anchorsv3.m
TestCases/DynamicCrackBranching/: AnimateData_PF.m  DynamicCrack.json  PlotData_PF.m
TestCases/DynamicCrackBranching/MeshGen/: combine_meshes.m  create_anchors_simple.m  generate_tmesh.m
TestCases/IceCliffs/: AnimateData.m  AnimateDataWF.m  IceCliff.json
TestCases/IceCliffs/Figures/: Stresses.eps  T.eps  TimeLFrac.emf  TimeLFrac.eps  oz.eps  phase.eps  ux.eps  uy.eps
TestCases/IceCliffs/MeshGen/: combine_meshes.m  create_anchors_simple.m  generate_tmesh.m  partition.m  process_anchorsv3.m
TestCases/TriAxialCompression/: AnimateData.m  PlotData.m  ReferenceData.m  TriAxial.json  TriAxial2D.json
TestCases/TriAxialCompression/Meshgen/: GenerateMesh.m  SaveToHDF.m  bezierExtraction2D.m  bezierExtraction3D.m  partition.m
TestCases/TriAxialCompression/Meshgen2D/: create_anchors_simple.m  generate_tmesh.m  partition.m
mesh/: mesh.cpp  mesh.h
mesh/ElementTypes/: BaseElemType.cpp  BaseElemType.h  IPScheme.cpp  IPScheme.h  TypeRegister.cpp  TypeRegister.h
mesh/ElementTypes/3D/: T2_6.cpp  T2_6.h  T2_6B.cpp  T2_6B.h  T3_10.cpp  T3_10.h  T3_10B.cpp  T3_10B.h
mesh/ElementTypes/BernStein/: L2B.cpp  L2B.h  L3B.cpp  L3B.h  T3B.cpp  T3B.h  T6B.cpp  T6B.h
mesh/ElementTypes/Bezier/: B1_2.cpp  B1_2.h  B1_3.cpp  B1_3.h  B1_4.cpp  B1_4.h  B2_2.cpp  B2_2.h  B2_3.cpp  B2_3.h  B2_4.cpp  B2_4.h
mesh/ElementTypes/Lagrange/: L2.cpp  L2.h  L3.cpp  L3.h  L4.cpp  L4.h  L9.cpp  L9.h
mesh/ElementTypes/NURBS/: NURBS3_Cube1.cpp  NURBS3_Cube1.h  NURBS3_Cube2.cpp  NURBS3_Cube2.h  NURBS3_Cube3.cpp  NURBS3_Cube3.h  NURBS3_Plane1.cpp  NURBS3_Plane1.h  NURBS3_Plane2.cpp  NURBS3_Plane2.h  NURBS3_Plane3.cpp  NURBS3_Plane3.h
mesh/Groups/: elementgroup.cpp  elementgroup.h  nodegroup.cpp  nodegroup.h
utility/: MyPrint.cpp  math.cpp  utility.h
